--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ nav.navbar {
 }
 nav.navbar.scrolled {
   padding: 0px 0;
-  background-color: var(--color-background);
+  background-color: var(--color-background) !important;
 }
 nav.navbar a.navbar-brand {
   width: 9%;
@@ -270,4 +270,310 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .circular-progress-bar {
   width: 50% !important;
   margin-bottom: 10px !important;
+}
+.project {
+  padding: 80px 0;
+  position: relative;
+  background-color: var(--color-project-bg);
+}
+.project h2 {
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+}
+.project p {
+  color: var(--color-light-gray);
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+.proj-imgbx {
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+  height: 90%;
+}
+.proj-imgbx::before {
+  content: "";
+  background: linear-gradient(
+    90.21deg,
+    var(--color-gradient-start) -5.91%,
+    var(--color-gradient-end) 111.58%
+  );
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.proj-imgbx:hover::before {
+  height: 100%;
+}
+.proj-txtx {
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+  color: var(--color-white);
+}
+.proj-imgbx:hover .proj-txtx {
+  top: 50%;
+  opacity: 1;
+}
+.proj-txtx h4 {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+.proj-txtx span {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.8px;
+}
+.background-image-right {
+  top: 20%;
+  position: absolute;
+  bottom: 0;
+  width: 35%;
+  right: 0;
+  z-index: -4;
+}
+.banner {
+  margin-top: 0;
+  padding: 260px 0 100px 0;
+  background-image: url("./assets/img/banner-bg.png");
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.banner .tagline {
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  padding: 8px 10px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid var(--color-white-half);
+  border-radius: 20px;
+  font-size: 20px;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+.banner h1 {
+  font-size: 65px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1;
+  margin-bottom: 20px;
+  display: block;
+}
+.banner p {
+  color: var(--color-light-gray);
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 96%;
+}
+.banner button {
+  color: var(--color-white);
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 60px;
+  letter-spacing: 0.8px;
+  display: flex;
+  align-items: center;
+}
+.banner button svg {
+  font-size: 25px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  line-height: 1;
+}
+.banner button:hover svg {
+  margin-left: 25px;
+}
+.banner img {
+  animation: updown 3s linear infinite;
+}
+@keyframes updown {
+  0% {
+    transform: translateY(-20px);
+  }
+  50% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+.txt-rotate > .wrap {
+  border-right: 0.08em solid #666;
+}
+
+/************ Contact Css ************/
+.contact {
+  background: linear-gradient(
+    90.21deg,
+    var(--color-gradient-start) -5.91%,
+    var(--color-gradient-end) 111.58%
+  );
+  padding: 60px 0 200px 0;
+}
+.contact img {
+  width: 92%;
+}
+.contact h2 {
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  color: var(--color-white);
+  margin: 0 0 8px 0;
+  padding: 18px 26px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  transition: 0.3s ease-in-out;
+}
+.contact form input:focus,
+.contact form textarea:focus {
+  background: rgba(255, 255, 255, 1);
+  color: var(--color-background);
+}
+.contact form input::placeholder,
+.contact form textarea::placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--color-white);
+}
+.contact form input:focus::placeholder,
+.contact form textarea:focus::placeholder {
+  color: var(--color-background);
+  opacity: 0.8;
+}
+.contact form button {
+  font-weight: 700;
+  color: var(--color-project-bg);
+  background-color: var(--color-white);
+  padding: 14px 48px;
+  font-size: 18px;
+  margin-top: 25px;
+  border-radius: 0;
+  position: relative;
+  transition: 0.3s ease-in-out;
+}
+.contact form button span {
+  z-index: 1;
+  position: relative;
+}
+.contact form button:hover {
+  color: var(--color-white);
+}
+.contact form button::before {
+  content: "";
+  background: var(--color-background);
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: 0.3s ease-in-out;
+}
+.contact form button:hover::before {
+  width: 100%;
+}
+
+p.success {
+  color: var(--color-green);
+}
+
+p.danger {
+  color: var(--color-red);
+}
+.footer {
+  padding: 0 0 50px 0;
+  background-image: url("./assets/img/footer-bg.png");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.footer img {
+  width: 25%;
+}
+.footer p {
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--color-light-gray);
+  letter-spacing: 0.5px;
+  margin-top: 20px;
+}
+.footer-bx {
+  background: var(--color-white);
+  border-radius: 55px;
+  color: var(--color-background);
+  padding: 70px 125px;
+  margin-bottom: 80px;
+  margin-top: -122px;
+}
+.footer-bx h3 {
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  line-height: 1.2em;
+}
+.footer-bx button {
+  font-weight: 700;
+  color: var(--color-project-bg);
+  background-color: var(--color-white);
+  border: 1px solid var(--color-project-bg);
+  padding: 20px 100px;
+  font-size: 18px;
+  border-radius: 0;
+  position: relative;
+  transition: 0.3s ease-in-out;
+}
+.footer-bx button span {
+  z-index: 1;
+  position: relative;
+}
+.footer-bx button:hover {
+  color: var(--color-white);
+}
+.footer-bx button::before {
+  content: "";
+  background: var(--color-background);
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: 0.3s ease-in-out;
+}
+.footer-bx button:hover::before {
+  width: 100%;
+}
+
+@media (max-width: 991px) {
+  .footer {
+    padding: 50px 0 50px 0;
+  }
+
+  .footer img {
+    margin-bottom: 50px;
+  }
 }
